# cntrlr

./: .gitignore  README.md  example.env  example.settings.yml  pyproject.toml
apps/controller/: pyproject.toml
apps/controller/src/controller/: main.py
apps/converter/: .gitignore  config.py  logger.py  main.py  pyproject.toml  routes.py
apps/converter/routes/: api.py  ui.py
apps/converter/src/converter/: config.py  logger.py  main.py  models.py
apps/converter/src/converter/routes/: api.py  ui.py
apps/converter/src/converter/templates/: index.html
apps/converter/storage/: app.db
apps/converter/templates/: base.html  converter_home.html
apps/filetul/: pyproject.toml
apps/filetul/src/filetul/: __init__.py
apps/gitul/: pyproject.toml
apps/gitul/src/gitul/: __init__.py  test_typer.py
dev/: README.md  dev_cli.py  ollama_annotations.txt  ollama_options.json  ollama_schemas.json  python_repl_strings.txt
lib/core/: README.md  pyproject.toml
lib/core/src/core/: __init__.py  base.py  constants.py  database.py  imports.py  utils.py
lib/core/src/core/clients/: ollama_client.py
lib/core/src/core/config/: __init__.py  base.py  factory.py
lib/core/src/core/models/: __init__.py  article.py  conversion_result.py  embedding.py  log_entry.py  network_host.py  notes.py  obsidian.py  repo.py  tts.py  web_fetch_content.py
lib/core/src/core/models/file_system/: __init__.py  audio_file.py  base.py  data_file.py  image_file.py  sqlite_file.py  video_file.py
lib/core/src/core/models/history/: __init__.py  clipboard_history.py  ps_history.py
lib/core/tests/: conftest.py  test_file_system.py  test_ollama_client.py  test_repo.py
lib/core/tests/test_data/: file_example_MARKDOWN.md  file_example_SQLITE.db
lib/services/: README.md  pyproject.toml  test_importers.py
lib/services/src/services/: __init__.py  file_importer.py  image_importer.py  importers.py  models.py  repository_importer.py  scanning.py
src/cntrlr/: __init__.py
