[project]
name = "cntrlr"
version = "0.1.2"
description = "CNTRLR modular application"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "rich>=14.3.1",
    "typer>=0.21.1",
]


[tool.uv.workspace]
members = [
    "lib/*",
    ]

[tool.uv.sources]
core = { workspace = true }

# tools
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(\.
|build
|dist
|.venv
|.eggs
|\.git
|\.hg
|\.mypy_cache
|\.tox
|\.venv
|__pypackages__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cntrlr", "core", "dev", "lib"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "yaml", "boto3", "docling"]
skip = ["venv", ".venv", "build", "dist", ".eggs", ".git", ".hg", ".mypy_cache", ".tox", "__pypackages__"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
default_section = "THIRDPARTY"
combine_as_imports = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
