[project]
name = "cntrlr"
version = "0.1.2"
description = "CNTRLR modular application"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "controller",
    "converter",
    "core",
    "rich>=13.0.0",
    "typer>=0.12.5,<0.13.0",
]

[tool.uv]
package = true

[project.scripts]
converter = "converter.main:entry"
controller = "controller.main:main"

[tool.uv.workspace]
members = [
    "lib/*",
    "apps/controller",
    "apps/converter",
    "apps/gitul",
    "apps/filetul",
]

[tool.uv.sources]
core = { workspace = true }
converter = { workspace = true }
controller = { workspace = true }

# tools
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(\.
|build
|dist
|.venv
|.eggs
|\.git
|\.hg
|\.mypy_cache
|\.tox
|\.venv
|__pypackages__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cntrlr", "core", "dev", "lib"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "yaml", "boto3", "docling"]
skip = ["venv", ".venv", "build", "dist", ".eggs", ".git", ".hg", ".mypy_cache", ".tox", "__pypackages__"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
default_section = "THIRDPARTY"
combine_as_imports = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage>=7.0.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["lib/core/tests", "lib/services/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["lib/core/src/core"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 0

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
