[project]
name = "controller"
version = "0.1.0"
description = "Controller application for CNTRLR package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
]

[project.scripts]
controller = "controller.main:main"

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
