[project]
name = "converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "core",
    "fastapi>=0.128.0",
    "gunicorn>=25.0.1",
    "jinja2>=3.1.6",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
core = { workspace = true }
