[project]
name = "converter"
version = "0.1.1"
description = "Converter application for CNTRLR package."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "core",
    "docling>=2.71.0",
    "fastapi>=0.128.0",
    "gunicorn>=25.0.1",
    "jinja2>=3.1.6",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
converter = "converter.main:entry"

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
