[project]
name = "filetul"
version = "0.1.0"
description = "File Utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "services",
    "core"
]

[project.scripts]
filetul = "filetul:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
services = { workspace = true }
