[project]
name = "gitul"
version = "0.1.0"
description = "Git Utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "services",
    "core"
]

[project.scripts]
gitul = "gitul:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
core = { workspace = true }
services = { workspace = true }
