[project]
name = "core"
version = "0.1.2"
description = "Core library for cntrlr"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pgvector>=0.4.2",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings[yaml]>=2.12.0",
    "sqlalchemy>=2.0.46",
    "sqlite-utils>=3.39",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
