[project]
name = "core"
version = "0.1.5"
description = "Core library for cntrlr"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "pillow>=10.0.0,<12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings[yaml]>=2.12.0",
    "sqlalchemy>=2.0.46",
    "sqlite-utils>=3.39",
]
[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage>=7.13.2",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]


[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
